--- a/core/templates/core/inbox.html
+++ b/core/templates/core/inbox.html
@@ -213,45 +213,34 @@
                       {% if messages %}
                         {% with latest_message=messages.latest %}
                           <div class="card mb-4">
-                            <!-- delete model popover -->
-                            <div class="d-flex justify-content-end">
-                              <a class="delete-trigger" href="#" data-bs-toggle="popover" data-bs-placement="bottom"
-                                data-bs-html="true"
-                                data-bs-content="<a href='{% url 'deleteinbox' latest_message.id %}' class='text-danger'>Delete</a>">
-                                <ion-icon name="ellipsis-vertical-outline"></ion-icon>
-                              </a>
-                            </div>
-          
-                            <!-- end delete popover -->
-          
-                            <div class="card-body px-0 pt-0 pb-2">
-                              <div class="d-flex px-2 py-1">
-                                <a href="{% url 'message' sender.username %}">
-                                  <img src="{{ sender.profile.image.url }}" class="avatar avatar-lg me-3 mx-auto p-2">
-          
-                                  <div class="d-flex flex-column justify-content-start">
-                                    <h6 class="mb-0 text-sm">{{ sender.username }}
-                                
-                                <small> {{ latest_message.date_sent|custom_timesince }}
-                                  
-          
-                                </small>
-          
-                                </h6>
-                                <div class="comment-text d-flex align-items-center">
-                                  <p class="text-xs text-dark rounded-3 p-2 d-flex justify-content-between"
-                                    >
-                                    {{ latest_message.content|truncate_word:5 }}
-                                  </p>
-                                  <span class="number text-dark m-3 mt-0 circle bg-gradient-danger"><b>{{ sender.sent_messages.count }}</b></span>
-                                </div>
+                            <div class="d-flex px-2 py-1">
+                                <a href="{% url 'message' sender.username %}" class="d-flex">
+                                    <img src="{{ sender.profile.image.url }}" class="avatar avatar-lg me-3 mx-auto p-2">
 
-
+                                    <div class="d-flex flex-column justify-content-start">
+                                        <h6 class="mb-0 text-sm">{{ sender.username }}
+                                            <small>{{ latest_message.date_sent|custom_timesince }}</small>
+                                        </h6>
+                                        <div class="comment-text d-flex align-items-center">
+                                            <p class="text-xs text-dark rounded-3 p-2 d-flex justify-content-between">
+                                                {{ latest_message.content|truncate_word:5 }}
+                                            </p>
+                                        </div>
+                                    </div>
                                 </a>
-                                
+                                <div class="d-flex flex-column align-items-end ms-auto">
+                                    <!-- delete model popover -->
+                                    <a class="delete-trigger" href="#" data-bs-toggle="popover" data-bs-placement="bottom"
+                                        data-bs-html="true"
+                                        data-bs-content="<a href='{% url 'deleteinbox' latest_message.id %}' class='text-danger'>Delete</a>">
+                                        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+                                    </a>
+                                    <span class="number text-dark m-3 mt-0 circle bg-gradient-success"><b>{{ sender.sent_messages.count }}</b></span>
+                                    <!-- end delete popover -->
+                                </div>
                               </div>
-                            </div>
                           </div>
+
                         {% endwith %}
                       {% endif %}
                     {% endwith %}
