Add fixed navbar

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,9 +7,8 @@
     <main class="main-content position-relative border-radius-lg">
       
       <!-- Navbar -->
-      <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
-      data-scroll="false">
-      <div class="container-fluid py-1 px-3">
+      <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl navbar-fixed" id="navbarBlur" data-scroll="false">
+        <div class="container-fluid py-1 px-3 navbar-content">
         <div class="d-flex justify-content-between align-items-center w-100">
           <!-- Logo (Far Left) -->
           <a class="navbar-brand" href="{% url 'home' %}">
@@ -194,7 +193,7 @@
     </nav>
       <!-- End Navbar -->
 <!-- suggested users -->
-<div class="container">
+<div class="container mt-8">
     <div class="row">
         <div class="col">
           <h5 class="text-uppercase navbar-brand">Suggested Users To Follow</h5>
