--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,21 @@ label {
 .icon-large {
         font-size: 1.5rem; 
     }
+.navbar-fixed {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        background-color: #fff; /* Adjust background color as needed */
+        padding: 15px; /* Adjust padding as needed */
+    }
 
+    .navbar-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 </style>
   </head>
 
