--- a/core/templates/core/password_change.html
+++ b/core/templates/core/password_change.html
@@ -6,12 +6,10 @@
 
 <main class="main-content position-relative border-radius-lg ">
   <!-- Navbar -->
-  <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
-    data-scroll="false">
-    <div class="container-fluid py-1 px-3">
-      <div class="d-flex justify-content-between align-items-center w-100">
+  <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl navbar-fixed" id="navbarBlur" data-scroll="false">
+    <div class="container-fluid py-1 px-3 navbar-content">
         <a class="navbar-brand" href="#" onclick="goBack()">
-          <i class="ni ni-bold-left"></i>
+            <i class="ni ni-bold-left"></i>
         </a>
   
         <!-- User Profile and Notification (Far Right) -->
@@ -126,7 +124,7 @@
   <!-- End Navbar -->
  
   <!-- form feed -->
-  <div class="align-items-start min-vh-25 mt-5 mb-4 border-radius-lg">
+  <div class="align-items-start min-vh-25 mt-5 mb-4 border-radius-lg mt-8">
   </div>
   <div class="container-fluid py-4">
     <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
