--- a/core/templates/core/profileposts.html
+++ b/core/templates/core/profileposts.html
@@ -6,12 +6,10 @@
 
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
-      data-scroll="false">
-      <div class="container-fluid py-1 px-3">
-        <div class="d-flex justify-content-between align-items-center w-100">
-          <a class="navbar-brand" href="#" onclick="goBack()">
-          <i class="ni ni-bold-left"></i>
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl navbar-fixed" id="navbarBlur" data-scroll="false">
+    <div class="container-fluid py-1 px-3 navbar-content">
+        <a class="navbar-brand" href="#" onclick="goBack()">
+            <i class="ni ni-bold-left"></i>
         </a>
     
           <!-- User Profile and Notification (Far Right) -->
@@ -196,7 +194,7 @@
     <!-- End Navbar -->
 
 <!-- individual posts -->
-            <div class="container mt-4">
+            <div class="container mt-8">
               <div class="row justify-content-center">
                 <div class="col-10 col-md-6 text-center">
                   <div class="d-flex justify-content-between align-items-center mb-2">
