Add custom_timesince to comments.html

--- a/core/templates/core/comments.html
+++ b/core/templates/core/comments.html
@@ -230,7 +230,7 @@
                             <div class="d-flex flex-column justify-content-start">
                               <h6 class="mb-0 text-sm">{{ comment.user.username}}
                           </a>
-                          <small> {{comment.date_posted|timesince}} ago
+                          <small> {{comment.date_posted|custom_timesince}}
                     
                           </small>
                     
