--- a/templates/base.html
+++ b/templates/base.html
@@ -119,105 +119,106 @@ label {
         
     {% endblock content %}
 
-    <footer class="footer py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mb-4 mx-auto text-center">
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              Company
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              About Us
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              Team
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              Products
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              Blog
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
-            >
-              Pricing
-            </a>
+    {% if request.resolver_match.url_name not in 'comments send_message' %}
+      <footer class="footer py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mb-4 mx-auto text-center">
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                Company
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                About Us
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                Team
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                Products
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                Blog
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-5 me-3 mb-sm-0 mb-2"
+              >
+                Pricing
+              </a>
+            </div>
+            <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-4 me-4"
+              >
+                <span class="text-lg fab fa-dribbble"></span>
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-4 me-4"
+              >
+                <span class="text-lg fab fa-twitter"></span>
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-4 me-4"
+              >
+                <span class="text-lg fab fa-instagram"></span>
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-4 me-4"
+              >
+                <span class="text-lg fab fa-pinterest"></span>
+              </a>
+              <a
+                href="javascript:;"
+                target="_blank"
+                class="text-dark me-xl-4 me-4"
+              >
+                <span class="text-lg fab fa-github"></span>
+              </a>
+            </div>
           </div>
-          <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-4 me-4"
-            >
-              <span class="text-lg fab fa-dribbble"></span>
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-4 me-4"
-            >
-              <span class="text-lg fab fa-twitter"></span>
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-4 me-4"
-            >
-              <span class="text-lg fab fa-instagram"></span>
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-4 me-4"
-            >
-              <span class="text-lg fab fa-pinterest"></span>
-            </a>
-            <a
-              href="javascript:;"
-              target="_blank"
-              class="text-dark me-xl-4 me-4"
-            >
-              <span class="text-lg fab fa-github"></span>
-            </a>
+          <div class="row">
+            <div class="col-8 mx-auto text-center mt-1">
+              <p class="mb-0 text-dark">
+                Copyright ©
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                Created by Colin.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-8 mx-auto text-center mt-1">
-            <p class="mb-0 text-dark">
-              Copyright ©
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              Created by Colin.
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
+      </footer>
+    {% endif %}
     <!--   Core JS Files   -->
     <!-- icons scripts -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
