--- a/core/templates/core/password_change_done.html
+++ b/core/templates/core/password_change_done.html
@@ -125,24 +125,13 @@
     <!-- End Navbar -->
 
     <!-- alert feed -->
-    <div class="align-items-start min-vh-25 mt-5 mb-4 border-radius-lg" >
-    </div>
-        <div class="container-fluid py-4">
-      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
-        <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
-          <div class="card z-index-0">
-            
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                <div class="circle bg-gradient-success">
-                    <span class="number text-dark"><i class="ni ni-check-bold"></i></span>
-                </div>
-                <small>Password changed successfully</small>
-            </div>
-
-          </div>
-          </div>
+    <div class="container">
+        <div class="alert alert-dark text-center d-flex justify-content-center" role="alert">
+          <small class="text-white">Password changed successfully</small>
+          <div class="circle bg-gradient-success">
+            <span class="number text-dark"><i class="ni ni-check-bold"></i></span>
         </div>
-      </div>
+        </div>
     </div>
     <!-- alert feed end -->
   </main>
