--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -14,6 +14,13 @@
               <h5>Register To SocialHuB</h5>
               <h6>LOGO</h6>
             </div>
+            {% if messages %}
+            <div class="container">
+                <div class="alert alert-danger text-center" role="alert">
+                  <small class="text-white">{% include 'core/alert.html' %}</small>
+                </div>
+            </div>
+            {% endif %}
             
             <div class="card-body">
               <form role="form" method="POST">
@@ -34,12 +41,6 @@
                     <input type="password" name="password2" class="form-control" id="floatingInputDisabled" placeholder="password2" required>
                     <label for="floatingInputDisabled">Confirm Password</label>
                 </div>
-                <!-- <div class="form-check form-check-info text-start">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                  <label class="form-check-label" for="flexCheckDefault">
-                    I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
-                  </label>
-                </div> -->
                 <div class="text-center">
                   <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
                 </div>
