Add urls to profile model and setting forms

--- a/core/templates/core/followers_following_list.html
+++ b/core/templates/core/followers_following_list.html
@@ -34,11 +34,11 @@
       </form>
     </div>
     <div class="d-flex justify-content-evenly mt-1 text-center">
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-instagram"></i></a>
-      <a href="#"><i class="fa fa-atom"></i></a>
-      <a href="#"><i class="fa fa-linkedin"></i></a>
+      <a href="{{user_profile.x_link}}"><i class="fa fa-twitter"></i></a>
+      <a href="{{user_profile.github_link}}"><i class="fa fa-github"></i></a>
+      <a href="{{user_profile.instagram_link}}"><i class="fa fa-instagram"></i></a>
+      <a href="{{user_profile.website_link}}"><i class="fa fa-atom"></i></a>
+      <a href="{{user_profile.linkedin_link}}"><i class="fa fa-linkedin"></i></a>
     </div>
   </div>
   <!-- profile end -->
