--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -35,11 +35,11 @@
       </form>
     </div>
     <div class="d-flex justify-content-evenly mt-1 text-center">
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-instagram"></i></a>
-      <a href="#"><i class="fa fa-atom"></i></a>
-      <a href="#"><i class="fa fa-linkedin"></i></a>
+      <a href="{{user_profile.x_link}}"><i class="fa fa-twitter"></i></a>
+      <a href="{{user_profile.github_link}}"><i class="fa fa-github"></i></a>
+      <a href="{{user_profile.instagram_link}}"><i class="fa fa-instagram"></i></a>
+      <a href="{{user_profile.website_link}}"><i class="fa fa-atom"></i></a>
+      <a href="{{user_profile.linkedin_link}}"><i class="fa fa-linkedin"></i></a>
     </div>
   </div>
   <!-- profile end -->
@@ -48,11 +48,12 @@
 
   <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
     <ul class="navbar-nav pe-2 d-flex align-items-center">
-      {% if user_profile.bio %}
+      {% if user_profile.career %}
       <li class="nav-item">
-        <a class="nav-link " href="#" data-bs-trigger="focus" data-bs-toggle="popover"
+        <a class="nav-link" href="#" data-bs-trigger="focus" data-bs-toggle="popover"
         data-bs-title="{{user_profile.user.username}}"
-            data-bs-content="{{user_profile.bio}} I live in {{user_profile.location}}">
+        data-bs-html="true"
+          data-bs-content="&#128188; {{user_profile.career}} <br>&#x1F4CD; {{user_profile.location}}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-user text-success text-sm opacity-10"></i>
