--- a/templates/base.html
+++ b/templates/base.html
@@ -160,39 +160,39 @@ label {
             </div>
             <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
               <a
-                href="javascript:;"
+                href="https://twitter.com/colin_ado"
                 target="_blank"
                 class="text-dark me-xl-4 me-4"
               >
-                <span class="text-lg fab fa-dribbble"></span>
-              </a>
-              <a
-                href="javascript:;"
-                target="_blank"
-                class="text-dark me-xl-4 me-4"
-              >
-                <span class="text-lg fab fa-twitter"></span>
-              </a>
-              <a
-                href="javascript:;"
-                target="_blank"
-                class="text-dark me-xl-4 me-4"
-              >
-                <span class="text-lg fab fa-instagram"></span>
-              </a>
-              <a
-                href="javascript:;"
-                target="_blank"
-                class="text-dark me-xl-4 me-4"
-              >
-                <span class="text-lg fab fa-pinterest"></span>
-              </a>
-              <a
-                href="javascript:;"
-                target="_blank"
-                class="text-dark me-xl-4 me-4"
-              >
-                <span class="text-lg fab fa-github"></span>
+              <i class="fa fa-twitter"></i>
+            </a>
+            <a
+            href="https://github.com/ColinAdo"
+            target="_blank"
+            class="text-dark me-xl-4 me-4"
+            >
+            <i class="fa fa-github"></i>
+          </a>
+          <a
+          href="https://www.instagram.com/colinadore30/"
+          target="_blank"
+          class="text-dark me-xl-4 me-4"
+          >
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a
+        href="javascript:;"
+        target="_blank"
+        class="text-dark me-xl-4 me-4"
+        >
+        <i class="fa fa-atom"></i>
+      </a>
+      <a
+      href="javascript:;"
+      target="_blank"
+      class="text-dark me-xl-4 me-4"
+      >
+      <i class="fa fa-linkedin"></i>
               </a>
             </div>
           </div>
