Added logo to templates

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,9 +10,8 @@
       <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl navbar-fixed" id="navbarBlur" data-scroll="false">
         <div class="container-fluid py-1 px-3 navbar-content">
         <div class="d-flex justify-content-between align-items-center w-100">
-          <!-- Logo (Far Left) -->
-          <a class="navbar-brand" href="{% url 'home' %}">
-            LOGO HERE
+          <a href="{% url 'home' %}">
+            <img src="{% static 'img/logos/SOCIALHUB.png' %}" class="avatar avatar-sm  me-3 ">
           </a>
     
           <!-- User Profile and Notification (Far Right) -->
