--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -12,7 +12,7 @@
           <div class="card z-index-0">
             <div class="card-header text-center pt-4">
               <h5>Register To SocialHuB</h5>
-              <h6>LOGO</h6>
+              <img src="{% static 'img/logos/SOCIALHUB.png' %}" class="avatar avatar-lg">
             </div>
             {% if messages %}
             <div class="container">
